--- a/dsn/Base.lproj/Main.storyboard
+++ b/dsn/Base.lproj/Main.storyboard
@@ -210,7 +210,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kWx-fD-qB3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2196" y="188"/>
+            <point key="canvasLocation" x="2909" y="190"/>
         </scene>
         <!--Reveal View Controller-->
         <scene sceneID="szk-uc-zFZ">
@@ -308,39 +308,42 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YPj-m7-E6o" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1354" y="188"/>
+            <point key="canvasLocation" x="2202" y="190"/>
         </scene>
-        <!--Root View Controller-->
-        <scene sceneID="Ve8-Ll-OF5">
+        <!--Publications Table View Controller-->
+        <scene sceneID="Op8-to-TbQ">
             <objects>
-                <tableViewController id="iad-Wd-vXE" customClass="PublicationsTableViewController" customModule="dsn" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="wAy-hM-Pnh">
+                <tableViewController id="M8K-zM-X7C" customClass="PublicationsTableViewController" customModule="dsn" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="f6A-q5-qH8">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PublicationTableViewCell" id="dv0-24-dWg">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PublicationTableViewCell" id="5U5-g6-4QL">
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dv0-24-dWg" id="z4S-4x-6ke">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5U5-g6-4QL" id="dyE-7T-2Qf">
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="y69-9y-6bu" kind="show" id="dFm-zf-We5"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="iad-Wd-vXE" id="yQk-be-KJz"/>
-                            <outlet property="delegate" destination="iad-Wd-vXE" id="4Ps-17-Job"/>
+                            <outlet property="dataSource" destination="M8K-zM-X7C" id="uEt-Ws-a5I"/>
+                            <outlet property="delegate" destination="M8K-zM-X7C" id="m0E-Vj-HjK"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="zXv-d1-FRI">
-                        <barButtonItem key="leftBarButtonItem" image="reveal-icon.png" id="FdK-M1-Wsb" customClass="MainMenuBarButtonItem" customModule="dsn" customModuleProvider="target"/>
+                    <navigationItem key="navigationItem" id="E6m-nE-PGB">
+                        <barButtonItem key="leftBarButtonItem" image="reveal-icon.png" id="jL4-GM-i1z" customClass="MainMenuBarButtonItem" customModule="dsn" customModuleProvider="target"/>
                     </navigationItem>
                     <connections>
-                        <outlet property="btnMenu" destination="FdK-M1-Wsb" id="TM8-dO-2dV"/>
+                        <outlet property="btnMenu" destination="jL4-GM-i1z" id="6L8-Dw-79q"/>
                     </connections>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="SUC-v3-HvK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="F4g-pS-UZx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2559" y="-2042"/>
+            <point key="canvasLocation" x="2909" y="-2042"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Czi-re-1Zw">
@@ -351,12 +354,12 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="iad-Wd-vXE" kind="relationship" relationship="rootViewController" id="jbW-5F-Cff"/>
+                        <segue destination="M8K-zM-X7C" kind="relationship" relationship="rootViewController" id="sDJ-jb-f5e"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I2f-g6-DMs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1739" y="-2042"/>
+            <point key="canvasLocation" x="2208" y="-2042"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="OiU-bz-JOg">
@@ -420,7 +423,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wc4-uY-uFv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1858" y="-537"/>
+            <point key="canvasLocation" x="2208" y="-556"/>
         </scene>
         <!--Nouvelle publication-->
         <scene sceneID="zWi-aB-yHP">
@@ -512,7 +515,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L9P-QF-RFj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2559" y="-518"/>
+            <point key="canvasLocation" x="2909" y="-537"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="mvT-nE-9wC">
+            <objects>
+                <viewController id="y69-9y-6bu" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="qO0-fG-Tc9"/>
+                        <viewControllerLayoutGuide type="bottom" id="pds-K8-gWU"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="uvK-aA-9ZI">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0EV-Yg-k87" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3611" y="-2042"/>
         </scene>
     </scenes>
     <resources>
