--- a/dsn/CommentView.xib
+++ b/dsn/CommentView.xib
@@ -2,52 +2,93 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CommentView" customModule="dsn" customModuleProvider="target">
             <connections>
-                <outlet property="imgProfile" destination="ocJ-K2-yau" id="eFH-cj-9UV"/>
+                <outlet property="imgMember" destination="oWV-FH-fbg" id="b5S-pJ-N2X"/>
+                <outlet property="txtCommentaire" destination="PK3-pH-1dM" id="BWl-Lg-YDx"/>
+                <outlet property="txtDatePublication" destination="GZt-Wc-fjF" id="cea-OI-QLP"/>
+                <outlet property="txtMember" destination="9Fr-Ia-Nb4" id="rer-oH-l97"/>
+                <outlet property="txtNombreVotes" destination="tJx-Rh-pYD" id="GED-mi-Ixo"/>
                 <outlet property="view" destination="iN0-l3-epB" id="KX5-0W-5pG"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="768" height="100"/>
+            <rect key="frame" x="0.0" y="0.0" width="768" height="120"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zbH-Fy-o4g">
-                    <rect key="frame" x="108" y="8" width="42" height="21"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="21" id="Ffd-6n-AEw"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LVl-zx-mGd">
-                    <rect key="frame" x="108" y="37" width="42" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ocJ-K2-yau">
-                    <rect key="frame" x="8" y="8" width="92" height="84"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="92" id="p3c-OC-cl0"/>
-                    </constraints>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4Bz-Wh-Yzp"/>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Q5G-dq-556">
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                </textView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oWV-FH-fbg">
+                    <rect key="frame" x="8" y="18" width="84" height="84"/>
                 </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="à" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cpz-E2-W8V">
+                    <rect key="frame" x="258" y="18" width="11" height="15"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GZt-Wc-fjF">
+                    <rect key="frame" x="277" y="18" width="150" height="15"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tJx-Rh-pYD">
+                    <rect key="frame" x="100" y="87" width="50" height="15"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Vote(s)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wXg-ca-15P">
+                    <rect key="frame" x="158" y="87" width="42" height="15"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tQf-Mx-dyZ"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text=":" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Ar-ky-ZtN">
+                    <rect key="frame" x="435" y="18" width="11" height="15"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" scrollEnabled="NO" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PK3-pH-1dM">
+                    <rect key="frame" x="100" y="41" width="660" height="38"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="660" id="Lfe-m9-Wo5"/>
+                    </constraints>
+                    <string key="text">aaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaa</string>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                </textView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Fr-Ia-Nb4">
+                    <rect key="frame" x="100" y="18" width="150" height="15"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="zbH-Fy-o4g" firstAttribute="leading" secondItem="ocJ-K2-yau" secondAttribute="trailing" constant="8" symbolic="YES" id="6Dw-km-c6x"/>
-                <constraint firstItem="zbH-Fy-o4g" firstAttribute="top" secondItem="ocJ-K2-yau" secondAttribute="top" id="KBf-H9-7Fi"/>
-                <constraint firstItem="zbH-Fy-o4g" firstAttribute="leading" secondItem="LVl-zx-mGd" secondAttribute="leading" id="P3m-bw-euS"/>
-                <constraint firstItem="ocJ-K2-yau" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" id="TDh-J0-Yuq"/>
-                <constraint firstItem="ocJ-K2-yau" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="topMargin" id="id7-ms-NRY"/>
-                <constraint firstItem="ocJ-K2-yau" firstAttribute="bottom" secondItem="iN0-l3-epB" secondAttribute="bottomMargin" id="sZC-Qt-Z2D"/>
-                <constraint firstItem="LVl-zx-mGd" firstAttribute="top" secondItem="zbH-Fy-o4g" secondAttribute="bottom" constant="8" symbolic="YES" id="tpf-Qy-Ryz"/>
-                <constraint firstAttribute="bottom" secondItem="LVl-zx-mGd" secondAttribute="bottom" constant="42" id="wti-32-0tR"/>
+                <constraint firstItem="9Fr-Ia-Nb4" firstAttribute="leading" secondItem="oWV-FH-fbg" secondAttribute="trailing" constant="8" id="39N-f2-Zjw"/>
+                <constraint firstItem="PK3-pH-1dM" firstAttribute="leading" secondItem="oWV-FH-fbg" secondAttribute="trailing" constant="8" id="7Ue-Fw-eNA"/>
+                <constraint firstItem="cpz-E2-W8V" firstAttribute="leading" secondItem="9Fr-Ia-Nb4" secondAttribute="trailing" constant="8" id="9aM-aA-qaT"/>
+                <constraint firstItem="GZt-Wc-fjF" firstAttribute="leading" secondItem="cpz-E2-W8V" secondAttribute="trailing" constant="8" id="DXH-1i-EkY"/>
+                <constraint firstItem="tJx-Rh-pYD" firstAttribute="top" secondItem="PK3-pH-1dM" secondAttribute="bottom" constant="8" id="KEg-eZ-aVW"/>
+                <constraint firstItem="tJx-Rh-pYD" firstAttribute="leading" secondItem="oWV-FH-fbg" secondAttribute="trailing" constant="8" id="N7d-KZ-l8S"/>
+                <constraint firstItem="wXg-ca-15P" firstAttribute="top" secondItem="PK3-pH-1dM" secondAttribute="bottom" constant="8" id="SZb-OG-reT"/>
+                <constraint firstItem="PK3-pH-1dM" firstAttribute="top" secondItem="9Fr-Ia-Nb4" secondAttribute="bottom" constant="8" id="SZn-cE-S4M"/>
+                <constraint firstItem="9Ar-ky-ZtN" firstAttribute="leading" secondItem="GZt-Wc-fjF" secondAttribute="trailing" constant="8" id="nbh-pk-vLK"/>
+                <constraint firstItem="wXg-ca-15P" firstAttribute="leading" secondItem="tJx-Rh-pYD" secondAttribute="trailing" constant="8" id="uIt-Nn-w6a"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <nil key="simulatedTopBarMetrics"/>
