--- a/dsn/PublicationView.xib
+++ b/dsn/PublicationView.xib
@@ -10,6 +10,7 @@
             <connections>
                 <outlet property="lblAuthor" destination="ucq-3U-4v9" id="ubA-Pc-AZZ"/>
                 <outlet property="lblDate" destination="ZCe-DX-3u8" id="NGz-QN-EHB"/>
+                <outlet property="lblDescription" destination="4eP-Ow-pKg" id="A9R-Wc-ZYx"/>
                 <outlet property="lblTitle" destination="1sl-rx-ntb" id="meT-wb-7WV"/>
                 <outlet property="view" destination="iN0-l3-epB" id="cuj-Hv-8Fl"/>
                 <outlet property="webView" destination="eiA-1q-XMU" id="Rew-dC-QmQ"/>
@@ -17,7 +18,7 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="768" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="768" height="800"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ucq-3U-4v9">
@@ -37,7 +38,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eiA-1q-XMU" customClass="CodeEditorViewController" customModule="dsn" customModuleProvider="target">
-                    <rect key="frame" x="8" y="83" width="752" height="508"/>
+                    <rect key="frame" x="8" y="83" width="752" height="482"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </webView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1sl-rx-ntb">
@@ -49,20 +50,43 @@
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="justified" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4eP-Ow-pKg">
+                    <rect key="frame" x="8" y="573" width="752" height="128"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                </textView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Commentaires" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C9b-9h-teQ">
+                    <rect key="frame" x="8" y="709" width="752" height="53"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="53" id="E24-2A-lhi"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="eiA-1q-XMU" secondAttribute="bottom" constant="9" id="5qb-Dn-o0J"/>
+                <constraint firstAttribute="bottom" secondItem="eiA-1q-XMU" secondAttribute="bottom" constant="235" id="5qb-Dn-o0J"/>
                 <constraint firstItem="ucq-3U-4v9" firstAttribute="top" secondItem="1sl-rx-ntb" secondAttribute="bottom" constant="8" symbolic="YES" id="6gu-Ao-Y0V"/>
+                <constraint firstItem="4eP-Ow-pKg" firstAttribute="top" secondItem="eiA-1q-XMU" secondAttribute="bottom" constant="8" symbolic="YES" id="BpH-5M-MLR"/>
                 <constraint firstItem="eiA-1q-XMU" firstAttribute="trailing" secondItem="ZCe-DX-3u8" secondAttribute="trailing" id="ETJ-is-BmW"/>
+                <constraint firstAttribute="bottom" secondItem="C9b-9h-teQ" secondAttribute="bottom" constant="38" id="GY9-XU-abW"/>
+                <constraint firstItem="4eP-Ow-pKg" firstAttribute="leading" secondItem="eiA-1q-XMU" secondAttribute="leading" id="HNY-ji-nye"/>
                 <constraint firstItem="1sl-rx-ntb" firstAttribute="trailing" secondItem="ZCe-DX-3u8" secondAttribute="trailing" constant="-168" id="IaP-KL-sF4"/>
+                <constraint firstItem="C9b-9h-teQ" firstAttribute="top" secondItem="4eP-Ow-pKg" secondAttribute="bottom" constant="8" symbolic="YES" id="Oux-yb-4Ax"/>
+                <constraint firstItem="4eP-Ow-pKg" firstAttribute="trailing" secondItem="eiA-1q-XMU" secondAttribute="trailing" id="Rs5-a4-1Yd"/>
                 <constraint firstItem="ZCe-DX-3u8" firstAttribute="leading" secondItem="ucq-3U-4v9" secondAttribute="trailing" constant="232" id="STk-E2-yHx"/>
+                <constraint firstItem="4eP-Ow-pKg" firstAttribute="leading" secondItem="C9b-9h-teQ" secondAttribute="leading" id="Uzr-ov-svj"/>
                 <constraint firstAttribute="trailing" secondItem="eiA-1q-XMU" secondAttribute="trailing" constant="8" id="WcA-yF-BQZ"/>
                 <constraint firstItem="eiA-1q-XMU" firstAttribute="top" secondItem="ucq-3U-4v9" secondAttribute="bottom" constant="8" symbolic="YES" id="Wqd-SM-e26"/>
                 <constraint firstItem="eiA-1q-XMU" firstAttribute="trailing" secondItem="iN0-l3-epB" secondAttribute="trailingMargin" id="Zvr-xH-rAD"/>
                 <constraint firstItem="ucq-3U-4v9" firstAttribute="leading" secondItem="eiA-1q-XMU" secondAttribute="leading" id="Zzp-wD-W5F"/>
                 <constraint firstItem="eiA-1q-XMU" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="fF5-Hq-Vjq"/>
                 <constraint firstItem="1sl-rx-ntb" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="topMargin" id="hQF-Vn-uCg"/>
+                <constraint firstItem="C9b-9h-teQ" firstAttribute="trailing" secondItem="4eP-Ow-pKg" secondAttribute="trailing" id="niA-0v-Kzs"/>
                 <constraint firstItem="1sl-rx-ntb" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" id="pn6-pO-500"/>
                 <constraint firstItem="ucq-3U-4v9" firstAttribute="baseline" secondItem="ZCe-DX-3u8" secondAttribute="baseline" id="tUi-Tg-BOh"/>
                 <constraint firstItem="ucq-3U-4v9" firstAttribute="leading" secondItem="1sl-rx-ntb" secondAttribute="leading" id="v9N-7z-o6t"/>
@@ -73,7 +97,7 @@
             <nil key="simulatedBottomBarMetrics"/>
             <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="564" y="277"/>
+            <point key="canvasLocation" x="563" y="378.5"/>
         </view>
     </objects>
 </document>
